# Google-Docs-MCP

./: .gitignore  README.md  client_secret.json.example  get_refresh_token.py  mcp.json  pyproject.toml  requirements.txt  server.py
